#21 enable static website

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,2 +1,4 @@
 user_uuid="9ac3fbc8-9d3e-4f9b-9a66-61ad0423f5e3"
 bucket_name="souavsk"
+index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
+error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
