--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,12 +22,12 @@ tasks:
       cd $PROJECT_ROOT
       source ./bin/set_tf_alias
       source ./bin/install_aws_cli
-  # - name: http-server
-  #   before: |
-  #     cd $PROJECT_ROOT
-  #     npm install --global http-server
-  #   command: 
-  #     http-server
+  - name: http-server
+    before: |
+      cd $PROJECT_ROOT
+      npm install --global http-server
+    command: 
+      http-server
 
 vscode:
   extensions:
